    - update debian/control.in
    - update debian/firefox-dev.install.in
    - update debian/firefox-dev.links.in
    - update debian/pkgconfig/libxul.pc.in
    - update debian/rules
  * Pref location changed to defaults/preferences
    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/apport/source_firefox.py.in
  * Update compare-locales to 0.9.5

  [ Jamie Strandboge <jamie@ubuntu.com> ]
  * adjust apparmor profile to deny reads to @{PROC}/[0-9]*/net/dev. Patch
    thanks to James Troup (LP: #955066)
  * adjust apparmor profile to deny reads to @{PROC}/[0-9]*/net/wireless.
    Patch thanks to James Troup (LP: #974141)

 -- Chris Coulson <chris.coulson@canonical.com>  Sun, 22 Apr 2012 02:07:07 +0100

firefox-trunk (13.0~a1~hg20120313r88815-0ubuntu1) precise; urgency=low

  * New upstream snapshot v13.0 A1 HG20120313R88815

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r278

  * Refresh build-depends:
    - Bump minimum GTK version to 2.14 as we build with GIO support
    - Add minimum requirement for glib (2.18)
    - Drop libidl-dev, this doesn't appear to be needed now
    - Bump minimum NSPR version to 4.9.0 for --enable-system-nspr builds
    - Bump minimum sqlite version to 3.7.10 for --enable-system-sqlite
      builds
    - Bump minimum NSS version to 3.13.2 for --enable-system-nss builds
  * Refresh patches:
    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/ubuntu-codes-google.patch
    - update debian/patches/revert-bmo621446-investigation.patch
    - update debian/patches/use-new-yasm-in-lucid.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/mozilla-kde.patch
  * Clean up the file exclude list and add comments for excluded files
    - update debian/build/create-tarball.py