@@ -144,497 +144,497 @@ Description: Unity appmenu integration for Firefox
 # Language packs below here
 
 Package: firefox-trunk-locale-af
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Afrikaans language pack for Firefox
  This package contains Afrikaans translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ar
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Arabic language pack for Firefox
  This package contains Arabic translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ast
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Asturian language pack for Firefox
  This package contains Asturian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-be
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Belarusian language pack for Firefox
  This package contains Belarusian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-bg
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Bulgarian language pack for Firefox
  This package contains Bulgarian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-bn
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Bengali language pack for Firefox
  This package contains Bengali translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-br
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Breton language pack for Firefox
  This package contains Breton translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-bs
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Bosnian language pack for Firefox
  This package contains Bosnian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ca
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Catalan; Valencian language pack for Firefox
  This package contains Catalan; Valencian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-cs
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Czech language pack for Firefox
  This package contains Czech translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-cy
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Welsh language pack for Firefox
  This package contains Welsh translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-da
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Danish language pack for Firefox
  This package contains Danish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-de
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: German language pack for Firefox
  This package contains German translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-el
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Greek language pack for Firefox
  This package contains Greek translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-en
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: English language pack for Firefox
  This package contains English translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-eo
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Esperanto language pack for Firefox
  This package contains Esperanto translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-es
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Spanish; Castilian language pack for Firefox
  This package contains Spanish; Castilian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-et
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Estonian language pack for Firefox
  This package contains Estonian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-eu
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Basque language pack for Firefox
  This package contains Basque translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-fa
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Persian language pack for Firefox
  This package contains Persian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-fi
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Finnish language pack for Firefox
  This package contains Finnish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-fr
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: French language pack for Firefox
  This package contains French translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-fy
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Western Frisian language pack for Firefox
  This package contains Western Frisian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ga
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Irish language pack for Firefox
  This package contains Irish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-gd
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Gaelic; Scottish Gaelic language pack for Firefox
  This package contains Gaelic; Scottish Gaelic translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-gl
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Galician language pack for Firefox
  This package contains Galician translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-gu
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Gujarati language pack for Firefox
  This package contains Gujarati translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-he
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Hebrew language pack for Firefox
  This package contains Hebrew translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-hi
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Hindi language pack for Firefox
  This package contains Hindi translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-hr
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Croatian language pack for Firefox
  This package contains Croatian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-hu
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Hungarian language pack for Firefox
  This package contains Hungarian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-hy
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Armenian language pack for Firefox
  This package contains Armenian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-id
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Indonesian language pack for Firefox
  This package contains Indonesian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-is
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Icelandic language pack for Firefox
  This package contains Icelandic translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-it
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Italian language pack for Firefox
  This package contains Italian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ja
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Japanese language pack for Firefox
  This package contains Japanese translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-kk
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Kazakh language pack for Firefox
  This package contains Kazakh translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-kn
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Kannada language pack for Firefox
  This package contains Kannada translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ko
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Korean language pack for Firefox
  This package contains Korean translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ku
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Kurdish language pack for Firefox
  This package contains Kurdish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-lg
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Ganda language pack for Firefox
  This package contains Ganda translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-lt
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Lithuanian language pack for Firefox
  This package contains Lithuanian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-lv
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Latvian language pack for Firefox
  This package contains Latvian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-mai
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Maithili language pack for Firefox
  This package contains Maithili translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-mk
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Macedonian language pack for Firefox
  This package contains Macedonian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ml
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Malayalam language pack for Firefox
  This package contains Malayalam translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-mr
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Marathi language pack for Firefox
  This package contains Marathi translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-nb
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Bokmål, Norwegian; Norwegian Bokmål language pack for Firefox
  This package contains Bokmål, Norwegian; Norwegian Bokmål translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-nl
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Dutch; Flemish language pack for Firefox
  This package contains Dutch; Flemish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-nn
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Norwegian Nynorsk; Nynorsk, Norwegian language pack for Firefox
  This package contains Norwegian Nynorsk; Nynorsk, Norwegian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-nso
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Sotho, Northern language pack for Firefox
  This package contains Sotho, Northern translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-or
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Oriya language pack for Firefox
  This package contains Oriya translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-pa
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Panjabi; Punjabi language pack for Firefox
  This package contains Panjabi; Punjabi translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-pl
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Polish language pack for Firefox
  This package contains Polish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-pt
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Portuguese language pack for Firefox
  This package contains Portuguese translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ro
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Romanian language pack for Firefox
  This package contains Romanian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ru
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Russian language pack for Firefox
  This package contains Russian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-si
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Sinhala; Sinhalese language pack for Firefox
  This package contains Sinhala; Sinhalese translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-sk
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Slovak language pack for Firefox
  This package contains Slovak translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-sl
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Slovenian language pack for Firefox
  This package contains Slovenian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-sq
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Albanian language pack for Firefox
  This package contains Albanian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-sr
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Serbian language pack for Firefox
  This package contains Serbian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-sv
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Swedish language pack for Firefox
  This package contains Swedish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-ta
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Tamil language pack for Firefox
  This package contains Tamil translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-te
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Telugu language pack for Firefox
  This package contains Telugu translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-th
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Thai language pack for Firefox
  This package contains Thai translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-tr
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Turkish language pack for Firefox
  This package contains Turkish translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-uk
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Ukrainian language pack for Firefox
  This package contains Ukrainian translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-zh-hans
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Simplified Chinese language pack for Firefox
  This package contains Simplified Chinese translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-zh-hant
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Traditional Chinese language pack for Firefox
  This package contains Traditional Chinese translations and search plugins
  for Firefox
 
 Package: firefox-trunk-locale-zu
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: Zulu language pack for Firefox
  This package contains Zulu translations and search plugins
