@@ -1,6 +1,6 @@
 
 Package: @MOZ_APP_NAME@-locale-@LANGCODE@
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}
 Description: @LANG@ language pack for Firefox
  This package contains @LANG@ translations and search plugins
