@@ -31,6 +31,7 @@ DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_ARCH		?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_GNU_CPU	?= $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
+DEB_HOST_GNU_SYSTEM	?= $(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM)
 # Other things which should be defined before including the CDBS rules
 DEB_TAR_SRCDIR		:= mozilla
 
@@ -169,6 +170,12 @@ endif
 ifeq (1,$(MOZ_ENABLE_BREAKPAD))
 	# Needed to enable crashreported in application.ini
 	export MOZILLA_OFFICIAL=1
+endif
+
+ifeq (linux-gnu, $(DEB_HOST_GNU_SYSTEM))
+LANGPACK_DIR := linux-$(DEB_HOST_GNU_CPU)/xpi
+else
+LANGPACK_DIR := $(DEB_HOST_GNU_SYSTEM)-$(DEB_HOST_GNU_CPU)/xpi
 endif
 
 ifeq ($(MOZ_APP_BASENAME), $(MOZ_APP_NAME))
@@ -422,9 +429,7 @@ debian/stamp-make-langpack-xpis: compare-locales/scripts/compare-locales
 
 	touch $@
 
-common-build-arch:: run-tests $(pkgconfig_files)
-
-common-build-indep:: make-langpack-xpis
+common-build-arch:: run-tests $(pkgconfig_files) make-langpack-xpis
 
 common-install-arch common-install-indep::
 	$(foreach dir,$(MOZ_LIBDIR) $(MOZ_INCDIR) $(MOZ_IDLDIR) $(MOZ_SDKDIR), \
@@ -456,7 +461,7 @@ binary-post-install/$(MOZ_APP_NAME)-dev::
 	rm -f debian/$(MOZ_APP_NAME)-dev/$(MOZ_INCDIR)/nspr/md/_linux.cfg
 	dh_link -p$(MOZ_APP_NAME)-dev $(MOZ_INCDIR)/nspr/prcpucfg.h $(MOZ_INCDIR)/nspr/md/_linux.cfg
 
-common-binary-post-install-indep::
+common-binary-post-install-arch::
 	@echo ""
 	@echo "**********************************"
 	@echo "* Installing language pack xpi's *"
@@ -470,11 +475,11 @@ common-binary-post-install-indep::
 		then \
 			language=`echo $$line | sed 's/\([^:]*\):*\([^:]*\)/\1/'` ; \
 			pkgname=`echo $$line | sed 's/\([^:]*\):*\([^:]*\)/\2/'` ; \
-			id=`python $(CURDIR)/debian/build/get-xpi-id.py $(CURDIR)/$(MOZ_DISTDIR)/linux-$(DEB_HOST_GNU_CPU)/xpi/$(MOZ_APP_NAME)-$(MOZ_VERSION).$${language}.langpack.xpi` ; \
+			id=`python $(CURDIR)/debian/build/get-xpi-id.py $(CURDIR)/$(MOZ_DISTDIR)/$(LANGPACK_DIR)/$(MOZ_APP_NAME)-$(MOZ_VERSION).$${language}.langpack.xpi` ; \
 			[ $$? -eq 0 ] || exit 1 ; \
 			echo "Installing $(MOZ_APP_NAME)-$(MOZ_VERSION).$${language}.langpack.xpi to $${id}.xpi in $(MOZ_APP_NAME)-locale-$${pkgname}" ; \
 			dh_installdirs -p$(MOZ_APP_NAME)-locale-$${pkgname} $(MOZ_ADDONDIR)/extensions ; \
-			cp $(CURDIR)/$(MOZ_DISTDIR)/linux-$(DEB_HOST_GNU_CPU)/xpi/$(MOZ_APP_NAME)-$(MOZ_VERSION).$${language}.langpack.xpi \
+			cp $(CURDIR)/$(MOZ_DISTDIR)/$(LANGPACK_DIR)/$(MOZ_APP_NAME)-$(MOZ_VERSION).$${language}.langpack.xpi \
 			  $(CURDIR)/debian/$(MOZ_APP_NAME)-locale-$${pkgname}/$(MOZ_ADDONDIR)/extensions/$${id}.xpi ; \
 			dh_installdirs -p$(MOZ_APP_NAME)-locale-$${pkgname} $(DIST_SEARCHPLUGIN_DIR)/locale/$${language} ; \
 			cp -r $(CURDIR)/$(MOZ_DISTDIR)/xpi-stage/locale-$${language}/searchplugins/*.xml \
@@ -482,7 +487,7 @@ common-binary-post-install-indep::
 		fi \
 	done < $(CURDIR)/debian/config/locales.shipped
 
-common-binary-fixup-indep::
+common-binary-fixup-arch::
 	@while read line ; \
 	do \
 		line=`echo $$line | sed 's/#.*//' | sed '/^$$/d'` ; \
